RESOLVED FIXED151177
Patchpoints with stackArgument constraints should work
https://bugs.webkit.org/show_bug.cgi?id=151177
Summary Patchpoints with stackArgument constraints should work
Filip Pizlo
Reported 2015-11-11 19:29:26 PST
Patch forthcoming.
Attachments
the patch (5.99 KB, patch)
2015-11-11 19:32 PST, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2015-11-11 19:32:08 PST
Created attachment 265353 [details] the patch
WebKit Commit Bot
Comment 2 2015-11-11 19:34:19 PST
Attachment 265353 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/b3/testb3.cpp:2590: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2591: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] ERROR: Source/JavaScriptCore/b3/testb3.cpp:2604: Consider using CHECK_EQ instead of CHECK(a == b) [readability/check] [2] Total errors found: 3 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3 2015-11-11 19:35:16 PST
Comment on attachment 265353 [details] the patch r=me
Filip Pizlo
Comment 4 2015-11-11 19:39:19 PST
Note You need to log in before you can comment on or make changes to this bug.