Source/JavaScriptCore/b3/air/AirSpecial.cpp
@@ -37,6 +37,7 @@ const char* const Special::dumpPrefix = "&";
 
 Special::Special()
     : m_index(UINT_MAX)
+    , m_code(nullptr)
 {
 }
 
